feat: Реализовал 12 ТЗ фичи. Остались интеграционные тесты на БД